[package]
name = "lan_switch"
version = "0.1.0"
edition = "2021"

[lib]
name = "lan_dci"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#libc = "0.2.122" 
bit-struct = {version="0.3.0"}
serde = { version = "1.0", features = ["derive"] }
